--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,65 @@
-alembic==1.0.7
+alembic==0.9.9
+asn1crypto==0.24.0
+astroid==1.6.2
+Babel==2.5.3
+bcrypt==3.1.4
+beautifulsoup4==4.7.1
 blinker==1.4
-certifi==2019.3.9
+braintree==3.44.0
+bs4==0.0.1
+certifi==2018.1.18
+cffi==1.11.5
 chardet==3.0.4
-Click==7.0
-dominate==2.3.5
-Flask==1.0.2
+click==6.7
+colorama==0.3.9
+cryptography==2.3.1
+cycler==0.10.0
+dominate==2.3.1
+elasticsearch==6.2.0
+Flask==0.12.2
+Flask-BabelEx==0.9.3
+Flask-Bootstrap==3.3.7.1
 Flask-Bootstrap4==4.0.2
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
-Flask-Migrate==2.3.1
+Flask-Migrate==2.1.1
+Flask-Moment==0.6.0
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-gunicorn==19.9.0
-idna==2.8
-itsdangerous==1.1.0
+gunicorn==19.7.1
+idna==2.6
+isort==4.3.4
+itsdangerous==0.24
 Jinja2==2.10
+jwt==0.5.4
+kiwisolver==1.1.0
+lazy-object-proxy==1.3.1
 Mako==1.0.7
-MarkupSafe==1.1.0
+MarkupSafe==1.0
+matplotlib==3.1.0
+mccabe==0.6.1
+numpy==1.16.2
+pandas==0.24.2
+passlib==1.7.1
 psycopg2==2.7.7
-python-dateutil==2.8.0
-python-editor==1.0.4
+pycparser==2.19
+pygal==2.4.0
+PyJWT==1.6.4
+pyparsing==2.4.0
+python-dateutil==2.7.2
+python-editor==1.0.3
+pytz==2018.3
 requests==2.21.0
-six==1.12.0
-SQLAlchemy==1.2.17
-stripe==2.23.0
-urllib3==1.24.1
+six==1.11.0
+soupsieve==1.9.1
+speaklater==1.3
+SQLAlchemy==1.2.5
+stripe==2.21.0
+urllib3==1.22
+virtualenv==16.0.0
 visitor==0.1.3
 Werkzeug==0.14.1
+wrapt==1.10.11
 WTForms==2.2.1
